--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,12 +112,12 @@ services:
       args:
         # - HEALTHCHECK BUILD ENV. => devrait être dans un conteneur Père, dont celui ci hérite, avec les BUILD ARGS déjà fixés.
         # Les variables globales de nom identique, sont définies dans le fichier ".env", propre à Docker Compose
-        - UTILISATEUR_ROCKETCHAT_HUBOT="$UTILISATEUR_ROCKETCHAT_HUBOT"
-        - UTILISATEUR_ROCKETCHAT_HUBOT_MDP="$UTILISATEUR_ROCKETCHAT_HUBOT_MDP"
-        - CHATROOM_ROCKETCHAT_HUBOT="$CHATROOM_ROCKETCHAT_HUBOT"
-        - ADMIN_USERNAME="$USERNAME_UTILISATEUR_ADMIN_INITIAL" 
-        - ADMIN_PASS="$MDP_UTILISATEUR_ADMIN_INITIAL" 
-        - ADMIN_EMAIL="$UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL" 
+        - UTILISATEUR_ROCKETCHAT_HUBOT=$UTILISATEUR_ROCKETCHAT_HUBOT
+        - UTILISATEUR_ROCKETCHAT_HUBOT_MDP=$UTILISATEUR_ROCKETCHAT_HUBOT_MDP
+        - CHATROOM_ROCKETCHAT_HUBOT=$CHATROOM_ROCKETCHAT_HUBOT
+        - ADMIN_USERNAME=$USERNAME_UTILISATEUR_ADMIN_INITIAL 
+        - ADMIN_PASS=$MDP_UTILISATEUR_ADMIN_INITIAL" 
+        - ADMIN_EMAIL=$UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL
 #     hostname: 'rocketchat'
 
     volumes:
@@ -127,10 +127,10 @@ services:
       - ROOT_URL=http://rocketchat.marguerite.io:3000
       - MONGO_URL=mongodb://mongo:27017/rocketchat
       - MONGO_OPLOG_URL=mongodb://mongo:27017/local?replicaSet=rs0
-      - MAIL_URL="smtp://smtp.google.com"
-      - ADMIN_USERNAME="$USERNAME_UTILISATEUR_ADMIN_INITIAL" 
-      - ADMIN_PASS="$MDP_UTILISATEUR_ADMIN_INITIAL" 
-      - ADMIN_EMAIL="$UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL" 
+      - MAIL_URL=smtp://smtp.google.com
+      - ADMIN_USERNAME=$USERNAME_UTILISATEUR_ADMIN_INITIAL
+      - ADMIN_PASS=$MDP_UTILISATEUR_ADMIN_INITIAL
+      - ADMIN_EMAIL=$UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL
     ports:
       - 3000:3000
     expose:
@@ -156,24 +156,24 @@ services:
       context: ./hubot-init-rocketcha/construction/
       args:
         # + le user RocketChat Admin, qui sera utilisé pour créer le user "$UTILISATEUR_ROCKETCHAT_HUBOT" et "$CHATROOM_ROCKETCHAT_HUBOT"
-        - USERNAME_UTILISATEUR_ADMIN_INITIAL="$USERNAME_UTILISATEUR_ADMIN_INITIAL" 
-        - MDP_UTILISATEUR_ADMIN_INITIAL="$MDP_UTILISATEUR_ADMIN_INITIAL" 
+        - USERNAME_UTILISATEUR_ADMIN_INITIAL=$USERNAME_UTILISATEUR_ADMIN_INITIAL 
+        - MDP_UTILISATEUR_ADMIN_INITIAL=$MDP_UTILISATEUR_ADMIN_INITIAL 
         # - BUILD ENV. => devrait être dans un conteneur Père, dont celui ci hérite, avec les BUILD ARGS déjà fixés.
         # Les variables globales de nom identique, sont définies dans le fichier ".env", propre à Docker Compose
-        - UTILISATEUR_ROCKETCHAT_HUBOT="$UTILISATEUR_ROCKETCHAT_HUBOT"
-        - UTILISATEUR_ROCKETCHAT_HUBOT_MDP="$UTILISATEUR_ROCKETCHAT_HUBOT_MDP"
-        - UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL="$UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL"
-        - CHATROOM_ROCKETCHAT_HUBOT="$CHATROOM_ROCKETCHAT_HUBOT"
-        - NUMERO_PORT_ECOUTE_ROCKETCHAT="$NUMERO_PORT_ECOUTE_ROCKETCHAT"
-        - NOM_DU_ROBOT_HUBOT_ROCKETCHAT="$NOM_DU_ROBOT_HUBOT_ROCKETCHAT"
+        - UTILISATEUR_ROCKETCHAT_HUBOT=$UTILISATEUR_ROCKETCHAT_HUBOT
+        - UTILISATEUR_ROCKETCHAT_HUBOT_MDP=$UTILISATEUR_ROCKETCHAT_HUBOT_MDP
+        - UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL=$UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL
+        - CHATROOM_ROCKETCHAT_HUBOT=$CHATROOM_ROCKETCHAT_HUBOT
+        - NUMERO_PORT_ECOUTE_ROCKETCHAT=$NUMERO_PORT_ECOUTE_ROCKETCHAT
+        - NOM_DU_ROBOT_HUBOT_ROCKETCHAT=$NOM_DU_ROBOT_HUBOT_ROCKETCHAT
     environment:
       # + le user RocketChat Admin, qui sera utilisé pour créer le user "$UTILISATEUR_ROCKETCHAT_HUBOT" et "$CHATROOM_ROCKETCHAT_HUBOT"
-      - USERNAME_UTILISATEUR_ADMIN_INITIAL="$USERNAME_UTILISATEUR_ADMIN_INITIAL" 
-      - MDP_UTILISATEUR_ADMIN_INITIAL="$MDP_UTILISATEUR_ADMIN_INITIAL" 
+      - USERNAME_UTILISATEUR_ADMIN_INITIAL=$USERNAME_UTILISATEUR_ADMIN_INITIAL 
+      - MDP_UTILISATEUR_ADMIN_INITIAL=$MDP_UTILISATEUR_ADMIN_INITIAL
       # ++ Le soudeur créée l'utilisateur "$UTILISATEUR_ROCKETCHAT_HUBOT" , en utilisant l'utilisateur initial
-      - UTILISATEUR_ROCKETCHAT_HUBOT="$UTILISATEUR_ROCKETCHAT_HUBOT"
-      - UTILISATEUR_ROCKETCHAT_HUBOT_MDP="$UTILISATEUR_ROCKETCHAT_HUBOT_MDP"
-      - UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL="$UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL"
+      - UTILISATEUR_ROCKETCHAT_HUBOT=$UTILISATEUR_ROCKETCHAT_HUBOT
+      - UTILISATEUR_ROCKETCHAT_HUBOT_MDP=$UTILISATEUR_ROCKETCHAT_HUBOT_MDP
+      - UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL=$UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL
       - CHATROOM_ROCKETCHAT_HUBOT=$CHATROOM_ROCKETCHAT_HUBOT
       - NOM_DOMAINE_DOCKER_ROCKETCHAT=$NOM_CONTENEUR_ROCKETCHAT
       - NUMERO_PORT_ECOUTE_ROCKETCHAT=$NUMERO_PORT_ECOUTE_ROCKETCHAT
@@ -195,17 +195,17 @@ services:
       - ROCKETCHAT_URL=rocketchat:3000
       # - ROCKETCHAT_ROOM=devops
       # Ce channel RocketChat est à crééer avec le client Web RocketChat, comme l'utlisateur Rocketchat utilisé par ce hubot
-      - ROCKETCHAT_ROOM="$CHATROOM_ROCKETCHAT_HUBOT"
-      - ROCKETCHAT_USER="$UTILISATEUR_ROCKETCHAT_HUBOT"
-      - ROCKETCHAT_PASSWORD="$UTILISATEUR_ROCKETCHAT_HUBOT_MDP"
+      - ROCKETCHAT_ROOM=$CHATROOM_ROCKETCHAT_HUBOT
+      - ROCKETCHAT_USER=$UTILISATEUR_ROCKETCHAT_HUBOT
+      - ROCKETCHAT_PASSWORD=$UTILISATEUR_ROCKETCHAT_HUBOT_MDP
       - ROCKETCHAT_AUTH=password
-      - BOT_NAME=NonoCadeauDulysse
+      - BOT_NAME=$NOM_DU_ROBOT_HUBOT_ROCKETCHAT
       - LISTEN_ON_ALL_PUBLIC=true
-      - GITLAB_URL="http://$NOM_CONTENEUR_GITLAB:8081/api/v3/"
+      - GITLAB_URL=http://$NOM_CONTENEUR_GITLAB:8081/api/v3/
       # + La "apiKey" Gitlab, qui doit être utilisée parle hubot, pour accéder à un compte Gitlab (et remonter des évènements tels que les pull request, comment on commit, etc...) 
-      - GITLAB_API_KEY="$HUBOT_GITLAB_API_KEY"
+      - GITLAB_API_KEY=$HUBOT_GITLAB_API_KEY
       # + Le "Token" Gitlab, qui doit être utilisée parle hubot, pour accéder à un compte Gitlab (et remonter des évènements tels que les pull request, comment on commit, etc...) 
-      - GITLAB_TOKEN=cNhsExCcNhsExicNhsExx
+      - GITLAB_TOKEN=$GITLAB_TOKEN
       # + Je pense qu'il s'agit du nombre maximal de messages consécutifs que le HUBOT pourra poster dans la chatroom (ANTI FLOOD)
       - GITLAB_RECORD_LIMIT=100
       #
