--- a/.env
+++ b/.env
@@ -15,7 +15,8 @@ NOM_CONTENEUR_GITLAB=marguerite_gitlab_service
 NUMERO_PORT_ECOUTE_ROCKETCHAT=3000
 ADRESSE_IP_HOTE_DOCKER=192.168.1.29
 # + la "apiKey" Gitlab, qui doit être utilisée parle hubot, pour accéder à un compte Gitlab (et remonter des évènements tels que les pull request, comment on commit, etc...) 
-HUBOT_GITLAB_API_KEY="jdf563lv6jT6416DGTF566HEDthbgdbdgfd65gf69"
+HUBOT_GITLAB_API_KEY=jdf563lv6jT6416DGTF566HEDthbgdbdgfd65gf69
+HUBOT_GITLAB_TOKEN=cNhsExCcNhsExicNhsExx
 # + À noter : ces varibles d'envrionnement sont utilisée à la fois dans le docker-compose.yml, et dans les fichiers Dockerfile
 VERSION_IMAGE_CENTOS=centos:7
 VERSION_IMAGE_MONGO=mongo:latest
