--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ CHATROOM_ROCKETCHAT_HUBOT=receptionyooma
 USERNAME_UTILISATEUR_ADMIN_INITIAL=jibjib
 # L'utilisateur initial, n'est plus l'utiliateur RocketChat que HUBOT utilise: il créée l'utilisateur utilisé par HUBOT
 MDP_UTILISATEUR_ADMIN_INITIAL=superjib
-# EMAIL_UTILISATEUR_ADMIN_INITIAL=superjib@jbl.io
+EMAIL_UTILISATEUR_ADMIN_INITIAL=superjib@jbl.io
 UTILISATEUR_ROCKETCHAT_HUBOT_EMAIL=jbl@kytes.io
 NUMERO_PORT_ECOUTE_REVERSE_PROXY=8090
 NOM_CONTENEUR_ROCKETCHAT=rocketchat
