--- a/rocketchat/construction/Dockerfile
+++ b/rocketchat/construction/Dockerfile
@@ -26,11 +26,13 @@ ENV CHATROOM_ROCKETCHAT_HUBOT=$CHATROOM_ROCKETCHAT_HUBOT
 ADD ./avail-to-hubot-healthcheck .
 ADD ./healthcheck .
 
+USER root
+
 # curl pour envoyer les requêtes avec le healthcheck, et jq pour parser les réponses JSON de la REST API RocketChat
 RUN apt-get update -y && apt-get install -y curl jq 
 RUN curl --version
 RUN jq --version
-# USER root
+
 
 # RUN chmod +x ./avail-to-hubot-healthcheck .
 # RUN chmod +x ./healthcheck .
