--- a/nginx/chatops.conf
+++ b/nginx/chatops.conf
@@ -31,8 +31,9 @@ server {
 
 
   location / {
-    proxy_pass http://marguerite_gitlab:8081;
-    proxy_redirect off;
+    proxy_pass http://marguerite_gitlab_service:8081;
+    # proxy_redirect off;
+    # proxy_redirect on;
     proxy_set_header Host $http_host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
