--- a/nginx/chatops.conf
+++ b/nginx/chatops.conf
@@ -32,7 +32,7 @@ server {
 
   location / {
     proxy_pass http://marguerite_gitlab_service:8081;
-    # proxy_redirect off;
+    proxy_redirect off;
     # proxy_redirect on;
     proxy_set_header Host $http_host;
     proxy_set_header X-Real-IP $remote_addr;
