--- a/.env
+++ b/.env
@@ -17,10 +17,29 @@ ADRESSE_IP_HOTE_DOCKER=192.168.1.29
 # + la "apiKey" Gitlab, qui doit être utilisée parle hubot, pour accéder à un compte Gitlab (et remonter des évènements tels que les pull request, comment on commit, etc...) 
 HUBOT_GITLAB_API_KEY=jdf563lv6jT6416DGTF566HEDthbgdbdgfd65gf69
 HUBOT_GITLAB_TOKEN=cNhsExCcNhsExicNhsExx
-# + À noter : ces varibles d'envrionnement sont utilisée à la fois dans le docker-compose.yml, et dans les fichiers Dockerfile
+
+# -- GITLAB --
+# https://hub.docker.com/r/gitlab/gitlab-ce/tags/
+GITLAB_CE_VERSION=11.2.1-ce.0
+# https://hub.docker.com/r/gitlab/gitlab-runner/tags/
+GITLAB_RUNNER_VERSION=alpine-v11.2.0
+POSTGRES_VERSION=9.6.8-alpine
+REDIS_VERSION=3-alpine
+
+NGINX_PROXY_NETWORK_NAME=nginxproxy_default
+GITLAB_HOST=gitlab.mydomain.io
+REGISTRY_HOST=registry.mydomain.io
+GITLAB_SSH_IP=5.6.7.8
+GITLAB_SSH_PORT=22
+GITLAB_TRUSTED_PROXY=172.18.0.0/16
+LETSENCRYPT_EMAIL=contact@mydomain.io
+TZ=Europe/Paris
+
+# -- IMAGES DOCKER
+# + À noter : ces variables d'envrionnement sont utilisée à la fois dans le docker-compose.yml, et dans les fichiers Dockerfile
 VERSION_IMAGE_CENTOS=centos:7
 VERSION_IMAGE_MONGO=mongo:latest
-VERSION_IMAGE_GITLAB_CE=gitlab/gitlab-ce:latest
+# VERSION_IMAGE_GITLAB_CE=gitlab/gitlab-ce:$GITLAB_CE_VERSION
 VERSION_IMAGE_GITLAB_RUNNER=gitlab/gitlab-runner:latest
 VERSION_IMAGE_ROCKETCHAT=rocketchat/rocket.chat:latest
 VERSION_IMAGE_HUBOT_ROCKETCHAT=rocketchat/hubot-rocketchat:latest
