--- a/.env
+++ b/.env
@@ -40,7 +40,7 @@ TZ=Europe/Paris
 VERSION_IMAGE_CENTOS=centos:7
 VERSION_IMAGE_MONGO=mongo:latest
 # VERSION_IMAGE_GITLAB_CE=gitlab/gitlab-ce:$GITLAB_CE_VERSION
-VERSION_IMAGE_GITLAB_RUNNER=gitlab/gitlab-runner:latest
+# VERSION_IMAGE_GITLAB_RUNNER=gitlab/gitlab-runner:$GITLAB_RUNNER_VERSION
 VERSION_IMAGE_ROCKETCHAT=rocketchat/rocket.chat:latest
 VERSION_IMAGE_HUBOT_ROCKETCHAT=rocketchat/hubot-rocketchat:latest
 VERSION_IMAGE_NGINX=nginx:latest
