--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,60 +1,115 @@
 version: '3'
 
 services:
+  # Pour la conf gitlab + runner + postgres + rredis => cf [https://github.com/mgcrea/docker-compose-gitlab-ce], many
+  # thanks to Olivier ;) https://github.com/mgcrea
   gitlab:
-    image: "gitlab/gitlab-ce:$GITLAB_CE_VERSION"
-    container_name: "$NOM_CONTENEUR_GITLAB"
+    image: gitlab/gitlab-ce:${GITLAB_CE_VERSION}
     restart: always
-#     hostname: "gitlab"
+    container_name: "$NOM_CONTENEUR_GITLAB"
+    hostname: "${GITLAB_HOST}"
     environment:
-      GITLAB_OMNIBUS_CONFIG: |
-        external_url 'http://gitlab.marguerite.io:8081/'
-        gitlab_rails['gitlab_shell_ssh_port'] = 222
-        gitlab_rails['lfs_enabled'] = true
-        nginx['listen_port'] = 8099
+      - TZ=${TZ}
+      - VIRTUAL_HOST=${GITLAB_HOST},${REGISTRY_HOST}
+      - VIRTUAL_PORT=80
+      - LETSENCRYPT_HOST=${GITLAB_HOST},${REGISTRY_HOST}
+      - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
     ports:
-      - "8081:8099"
-      - "4443:443"
-      - "2222:222"
-#     expose:
-#       - "3000"
-#       - "8081"
-#       - "4443"
-#       - "2222"
-#       - "80"
-#       - "222"
-#       - "443"
+      - ${GITLAB_SSH_IP}:${GITLAB_SSH_PORT}:22
     volumes:
-      - ./gitlab/config:/etc/gitlab
-      - ./gitlab/logs:/var/log/gitlab
-      - ./gitlab/data:/var/opt/gitlab
+      - './volumes/config:/etc/gitlab'
+      - './volumes/logs:/var/log/gitlab'
+      - './volumes/data:/var/opt/gitlab'
+    depends_on:
+      - redis
+      - postgres
     networks:
-      - devops
-#       devops:
-#         ipv4_address: 192.168.160.4
+      - default
+      - nginx_proxy
 
   runner:
-    build: ./gitlab/runner/
-    image: jbl/gitlab-runner:$GITLAB_RUNNER_VERSION
-    container_name: 'runner'
-#     hostname: "runner"
-    restart: "always"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-#     links:
-#       - marguerite_gitlab
+    image: gitlab/gitlab-runner:${GITLAB_RUNNER_VERSION}
+    restart: always
+    container_name: gitlab_runner
     environment:
-      # - GITLAB_HOST=marguerite_gitlab:8081
-      - GITLAB_HOST=gitlab.marguerite.io
-      - GITLAB_PORT=8081
-    ports:
-      - "8000:8000"
-#     expose:
-#       - "8000"
-    networks:
-      - devops
-#       devops:
-#         ipv4_address: 192.168.160.5
+      - CI_SERVER_URL=https://${GITLAB_HOST}/
+    volumes:
+      - ./volumes/runner:/etc/gitlab-runner
+      - /var/run/docker.sock:/var/run/docker.sock:rw
+
+  postgres:
+    image: postgres:${POSTGRES_VERSION}
+    restart: always
+    container_name: gitlab_postgresql
+    # https://github.com/docker-library/docs/tree/master/postgres#environment-variables
+    environment:
+      - POSTGRES_USER=gitlab
+      - POSTGRES_DB=gitlabhq_production
+    volumes:
+      - ./volumes/postgres:/var/lib/postgresql/data
+    restart: always
+    
+# --------------------------------------------------------------------------
+# ------------------------ ANCIEN GITLAB -----------------------------------
+# --------------------------------------------------------------------------
+#   gitlab:
+#     image: "gitlab/gitlab-ce:$GITLAB_CE_VERSION"
+#     container_name: "$NOM_CONTENEUR_GITLAB"
+#     restart: always
+#     hostname: "gitlab"
+#     environment:
+#       GITLAB_OMNIBUS_CONFIG: |
+#         external_url 'http://gitlab.marguerite.io:8081/'
+#         gitlab_rails['gitlab_shell_ssh_port'] = 222
+#         gitlab_rails['lfs_enabled'] = true
+#         nginx['listen_port'] = 8099
+#     ports:
+#       - "8081:8099"
+#       - "4443:443"
+#       - "2222:222"
+# #     expose:
+# #       - "3000"
+# #       - "8081"
+# #       - "4443"
+# #       - "2222"
+# #       - "80"
+# #       - "222"
+# #       - "443"
+#     volumes:
+#       - ./gitlab/config:/etc/gitlab
+#       - ./gitlab/logs:/var/log/gitlab
+#       - ./gitlab/data:/var/opt/gitlab
+#     networks:
+#       - devops
+# #       devops:
+# #         ipv4_address: 192.168.160.4
+# 
+#   runner:
+#     build: ./gitlab/runner/
+#     image: jbl/gitlab-runner:$GITLAB_RUNNER_VERSION
+#     container_name: 'runner'
+# #     hostname: "runner"
+#     restart: "always"
+#     volumes:
+#       - /var/run/docker.sock:/var/run/docker.sock
+# #     links:
+# #       - marguerite_gitlab
+#     environment:
+#       # - GITLAB_HOST=marguerite_gitlab:8081
+#       - GITLAB_HOST=gitlab.marguerite.io
+#       - GITLAB_PORT=8081
+#     ports:
+#       - "8000:8000"
+# #     expose:
+# #       - "8000"
+#     networks:
+#       - devops
+# #       devops:
+# #         ipv4_address: 192.168.160.5
+# --------------------------------------------------------------------------
+# ------------------------ ANCIEN GITLAB -----------------------------------
+# --------------------------------------------------------------------------
+
 
   mongo:
     # image: mongo:latest
