--- a/.env
+++ b/.env
@@ -26,12 +26,15 @@ GITLAB_RUNNER_VERSION=alpine-v11.2.0
 POSTGRES_VERSION=9.6.8-alpine
 REDIS_VERSION=3-alpine
 
-NGINX_PROXY_NETWORK_NAME=nginxproxy_default
-GITLAB_HOST=gitlab.mydomain.io
-REGISTRY_HOST=registry.mydomain.io
-GITLAB_SSH_IP=5.6.7.8
-GITLAB_SSH_PORT=22
-GITLAB_TRUSTED_PROXY=172.18.0.0/16
+# NGINX_PROXY_NETWORK_NAME=nginxproxy_default
+NOM_DU_RESEAU_INFRA_DOCKER=devops
+GITLAB_HOST=gitlab.marguerite.io
+# -->> Pour configurer Un registry Docker utilisable par Gitlab?
+# REGISTRY_HOST=registry.mydomain.io
+GITLAB_SSH_IP=0.0.0.0
+GITLAB_SSH_PORT=2222
+# - GITLAB_TRUSTED_PROXY ...??? Kezako? cf. https://docs.gitlab.com/omnibus/docker/
+# GITLAB_TRUSTED_PROXY=172.18.0.0/16
 LETSENCRYPT_EMAIL=contact@mydomain.io
 TZ=Europe/Paris
 
