--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,16 @@ services:
     restart: always
     networks:
       - $NOM_DU_RESEAU_INFRA_DOCKER
+      
+  redis:
+    image: redis:${REDIS_VERSION}
+    restart: always
+    container_name: gitlab_redis
+    command:
+      - --loglevel warning
+    volumes:
+      - ./volumes/redis:/var/lib/redis
+    restart: always
 # --------------------------------------------------------------------------
 # ------------------------ ANCIEN GITLAB -----------------------------------
 # --------------------------------------------------------------------------
