--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,9 @@ services:
       # - LETSENCRYPT_HOST=${GITLAB_HOST},${REGISTRY_HOST}
       # - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
     ports:
+      # 0.0.0.0 : 8081 : 80 
+      - ${GITLAB_HTTP_IP}:${GITLAB_HTTP_PORT}:80
+      - ${GITLAB_HTTPS_IP}:${GITLAB_HTTPS_PORT}:443
       - ${GITLAB_SSH_IP}:${GITLAB_SSH_PORT}:22
     volumes:
       - './gitlab/config:/etc/gitlab'
@@ -33,7 +36,7 @@ services:
     environment:
       - CI_SERVER_URL=https://${GITLAB_HOST}/
     volumes:
-      - ./volumes/runner:/etc/gitlab-runner
+      - ./gitlab/runner:/etc/gitlab-runner
       - /var/run/docker.sock:/var/run/docker.sock:rw
     networks:
       - $NOM_DU_RESEAU_INFRA_DOCKER
