--- a/.env
+++ b/.env
@@ -33,6 +33,10 @@ GITLAB_HOST=gitlab.marguerite.io
 # REGISTRY_HOST=registry.mydomain.io
 GITLAB_SSH_IP=0.0.0.0
 GITLAB_SSH_PORT=2222
+GITLAB_HTTP_IP=0.0.0.0
+GITLAB_HTTP_PORT=8083
+GITLAB_HTTPS_IP=0.0.0.0
+GITLAB_HTTPS_PORT=9443
 # - GITLAB_TRUSTED_PROXY ...??? Kezako? cf. https://docs.gitlab.com/omnibus/docker/
 # GITLAB_TRUSTED_PROXY=172.18.0.0/16
 LETSENCRYPT_EMAIL=contact@mydomain.io
