--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,9 +24,9 @@ services:
       - ${GITLAB_HTTPS_IP}:${GITLAB_HTTPS_PORT}:443
       - ${GITLAB_SSH_IP}:${GITLAB_SSH_PORT}:22
     volumes:
-      - './gitlab/config:/etc/gitlab'
-      - './gitlab/logs:/var/log/gitlab'
-      - './gitlab/data:/var/opt/gitlab'
+      - ./gitlab/config:/etc/gitlab:rw
+      - ./gitlab/logs:/var/log/gitlab:rw
+      - ./gitlab/data:/var/opt/gitlab:rw
     depends_on:
       - redis
       - postgres
