--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,15 @@ services:
     restart: always
     container_name: "$NOM_CONTENEUR_GITLAB"
 #     hostname: "${GITLAB_HOST}"
+#     environment:
+#       - GITLAB_OMNIBUS_CONFIG="external_url 'http://gitlab.marguerite.io:8083/';"
+# #       GITLAB_OMNIBUS_CONFIG: |
+# #         external_url 'http://gitlab.example.com:9090'
+# #         nginx['listen_port'] = 80
     environment:
-    - GITLAB_OMNIBUS_CONFIG="external_url 'http://gitlab.marguerite.io:8083/';"
-#       GITLAB_OMNIBUS_CONFIG: |
-#         external_url 'http://gitlab.marguerite.io:8083/'
-#         nginx['listen_port'] = 80
+      GITLAB_OMNIBUS_CONFIG: |
+        external_url 'http://gitlab.marguerite.io:8083'
+        gitlab_rails['gitlab_shell_ssh_port'] = 2222
 #     environment:
 #       - TZ=${TZ}
 #       # - VIRTUAL_HOST=${GITLAB_HOST},${REGISTRY_HOST}
