--- a/.env
+++ b/.env
@@ -28,8 +28,8 @@ REDIS_VERSION=3-alpine
 
 # NGINX_PROXY_NETWORK_NAME=nginxproxy_default
 NOM_DU_RESEAU_INFRA_DOCKER=devops
-# GITLAB_HOST=gitlab.marguerite.io
-GITLAB_HOST=http://gitlab.marguerite.io:8083/
+GITLAB_HOST=gitlab.marguerite.io
+# GITLAB_HOST=http://gitlab.marguerite.io:8083/
 
 # -->> Pour configurer Un registry Docker utilisable par Gitlab?
 # REGISTRY_HOST=registry.mydomain.io
