--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,26 +7,15 @@ services:
     image: gitlab/gitlab-ce:${GITLAB_CE_VERSION}
     restart: always
     container_name: "$NOM_CONTENEUR_GITLAB"
-#     hostname: "${GITLAB_HOST}"
-#     environment:
-#       GITLAB_OMNIBUS_CONFIG: |
-#         external_url 'http://gitlab.marguerite.io:8083'
-#         gitlab_rails['gitlab_shell_ssh_port'] = 2222
-#     environment:
-#       - TZ=${TZ}
-#       # - VIRTUAL_HOST=${GITLAB_HOST},${REGISTRY_HOST}
-#       # - VIRTUAL_PORT=80
-#       # - LETSENCRYPT_HOST=${GITLAB_HOST},${REGISTRY_HOST}
-#       # - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
     ports:
       # 0.0.0.0 : 8081 : 80 
       - ${GITLAB_HTTP_IP}:${GITLAB_HTTP_PORT}:80
       - ${GITLAB_HTTPS_IP}:${GITLAB_HTTPS_PORT}:443
       - ${GITLAB_SSH_IP}:${GITLAB_SSH_PORT}:22
     volumes:
-      - ./gitlab/config:/etc/gitlab:rw
-      - ./gitlab/logs:/var/log/gitlab:rw
-      - ./gitlab/data:/var/opt/gitlab:rw
+      - ./gitlab/config:/etc/gitlab
+      - ./gitlab/logs:/var/log/gitlab
+      - ./gitlab/data:/var/opt/gitlab
     depends_on:
       - redis
       - postgres
