--- a/nginx/chatops.conf
+++ b/nginx/chatops.conf
@@ -10,15 +10,15 @@ server {
 
   location / {
     proxy_pass http://rocketchat:3000/;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
+    # proxy_http_version 1.1;
+    # proxy_set_header Upgrade $http_upgrade;
+    # proxy_set_header Connection "upgrade";
     proxy_set_header Host $http_host;
 
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forward-Proto http;
-    proxy_set_header X-Nginx-Proxy true;
+    # proxy_set_header X-Nginx-Proxy true;
 
     proxy_redirect off;
   }
@@ -31,21 +31,25 @@ server {
 
 
   location / {
-    proxy_pass http://marguerite_gitlab_service:8081;
-    proxy_redirect off;
-    # proxy_redirect on;
+    proxy_pass http://marguerite_gitlab_service:8083/;
+
     proxy_set_header Host $http_host;
+        
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header X-Forwarded-Protocol $scheme;
     proxy_set_header X-Url-Scheme $scheme;
+    
+    proxy_redirect off;
+    # proxy_redirect on;
+    
   }
 }
 
 server {
   listen 80;
-	server_name www.marguerite.io;
+	server_name gitlab-runner.marguerite.io;
 
 	location / {
           proxy_pass http://runner:8000;
