--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,11 @@ services:
     image: gitlab/gitlab-ce:${GITLAB_CE_VERSION}
     restart: always
     container_name: "$NOM_CONTENEUR_GITLAB"
+    hostname: "gitlab"
+    environment:
+      GITLAB_OMNIBUS_CONFIG: |
+        external_url 'http://gitlab.marguerite.io:8083/'
+        gitlab_rails['lfs_enabled'] = true
     ports:
       # 0.0.0.0 : 8081 : 80 
       - ${GITLAB_HTTP_IP}:${GITLAB_HTTP_PORT}:80
