--- a/nginx/chatops.conf
+++ b/nginx/chatops.conf
@@ -36,11 +36,10 @@ server {
     proxy_set_header Host $http_host;
         
     proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header X-Forwarded-Protocol $scheme;
-    proxy_set_header X-Url-Scheme $scheme;
-    
+    proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forward-Proto http;
+    # proxy_set_header X-Nginx-Proxy true;
+
     proxy_redirect off;
     # proxy_redirect on;
     
