--- a/nginx/chatops.conf
+++ b/nginx/chatops.conf
@@ -10,15 +10,15 @@ server {
 
   location / {
     proxy_pass http://rocketchat:3000/;
-    # proxy_http_version 1.1;
-    # proxy_set_header Upgrade $http_upgrade;
-    # proxy_set_header Connection "upgrade";
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
     proxy_set_header Host $http_host;
 
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forward-Proto http;
-    # proxy_set_header X-Nginx-Proxy true;
+    proxy_set_header X-Nginx-Proxy true;
 
     proxy_redirect off;
   }
@@ -32,13 +32,16 @@ server {
 
   location / {
     proxy_pass http://marguerite_gitlab_service:8083/;
-
+    
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
     proxy_set_header Host $http_host;
-        
+
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forward-Proto http;
-    # proxy_set_header X-Nginx-Proxy true;
+    proxy_set_header X-Nginx-Proxy true;
 
     proxy_redirect off;
     # proxy_redirect on;
