--- a/nginx/chatops.conf
+++ b/nginx/chatops.conf
@@ -10,19 +10,20 @@ server {
 
   location / {
     proxy_pass http://rocketchat:3000/;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
+    # proxy_http_version 1.1;
+    # proxy_set_header Upgrade $http_upgrade;
+    # proxy_set_header Connection "upgrade";
     proxy_set_header Host $http_host;
 
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forward-Proto http;
-    proxy_set_header X-Nginx-Proxy true;
+    # proxy_set_header X-Nginx-Proxy true;
 
     proxy_redirect off;
   }
 }
+
 
 server {
   listen 80;
@@ -32,51 +33,17 @@ server {
 
   location / {
     proxy_pass http://marguerite_gitlab_service:8083/;
-    
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
+
     proxy_set_header Host $http_host;
 
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forward-Proto http;
-    proxy_set_header X-Nginx-Proxy true;
+    # proxy_set_header X-Nginx-Proxy true;
 
     proxy_redirect off;
     # proxy_redirect on;
-    
+
   }
 }
 
-server {
-  listen 80;
-	server_name gitlab-runner.marguerite.io;
-
-	location / {
-          proxy_pass http://runner:8000;
-          proxy_redirect off;
-          proxy_set_header Host $http_host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-          proxy_set_header X-Forwarded-Proto $scheme;
-          proxy_set_header X-Forwarded-Protocol $scheme;
-          proxy_set_header X-Url-Scheme $scheme;
-	}
-}
-
-server {
-  listen 80;
-	server_name hom.imarguerite.io;
-
-	location / {
-	  proxy_pass http://runner:8000;
-          proxy_redirect off;
-          proxy_set_header Host $http_host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-          proxy_set_header X-Forwarded-Proto $scheme;
-          proxy_set_header X-Forwarded-Protocol $scheme;
-          proxy_set_header X-Url-Scheme $scheme;
-	}
-}
