--- a/nginx/chatops.conf
+++ b/nginx/chatops.conf
@@ -17,7 +17,8 @@ server {
 
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forward-Proto http;
+    # proxy_set_header X-Forward-Proto http;
+    proxy_set_header X-Forward-Proto $scheme;
     # proxy_set_header X-Nginx-Proxy true;
 
     proxy_redirect off;
@@ -38,7 +39,8 @@ server {
 
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forward-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forward-Proto http;
+    # proxy_set_header X-Forward-Proto http;
+    proxy_set_header X-Forward-Proto $scheme;
     # proxy_set_header X-Nginx-Proxy true;
 
     proxy_redirect off;
@@ -46,4 +48,3 @@ server {
 
   }
 }
-
